--- a/style.css
+++ b/style.css
@@ -19,19 +19,55 @@ body {
 }
 h1 {
 	position: fixed;
-	min-height: 100vh;
+	/* min-height: 100vh; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	line-height: 1.6;
 	top: 0;
-	left: 0;
+	left: 30%;
 	overflow: hidden;
 }
+button{
+	position: fixed;
+	height: 50px;
+	width: 100px;
+	font-size: 1em;
+	/* min-height: 100vh; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 1.6;
+	top: 70%;
+	left: 45%;
+	visibility: hidden;
+}
+#quit{
+	position: fixed;
+	height: 50px;
+	width: 100px;
+	font-size: 1em;
+	/* min-height: 100vh; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 1.6;
+	top: 70%;
+	left: 40%;
+	visibility: hidden;
+}
+
 .container {
 	height: 700px;
 	width: 1500px;
 	position: relative;
+
+	
+}
+a{
+	color : white;
+	padding: 2em;
+	font-size: 1.5em;
 }
 .play h1 {
 	font-weight: 100;
@@ -39,11 +75,12 @@ h1 {
 	position:fixed;
 	top: 80%;
 	left: 50%;
-	transform: translate(-65%, -50%);
+	transform: translate(-65%, -65%);
 	cursor: pointer;
 	background-color: rgba(31, 19, 19, 0.523);
-	padding: 20px 50px;
+	padding: 10px 20px;
 	color: white;
+	align-items: center;
     
 }
 
@@ -61,9 +98,8 @@ li {
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	top: 0;
-	left: 0;
-
+	top: 10%;
+	left: 10%;
 	display: grid;
 	grid-template-rows: repeat(3, 1fr);
 	grid-row-gap: 20px;
@@ -114,20 +150,10 @@ li {
 .choice:hover{
 	background-color: coral;
 }
-/* #next{
-    width: 100px;
-    height: 100px;
-    background-color: rgba(210, 224, 224, 0.284);
-    cursor: pointer;
-    color: rgb(14, 13, 13);
-    font-size: 20 px;
-    
-} */
-
-.scoreContainer {
+.score-container {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 50%;
 	background-color: rgba(0, 0, 0, 0.8);
 	height: 100%;
 	width: 100%;
@@ -140,7 +166,7 @@ li {
 	visibility: hidden;
 }
 
-.scoreContainer h2 {
+.score-container h2 {
 	font-size: 30px;
 	font-weight: 100;
 	text-align: center;
@@ -149,10 +175,10 @@ li {
 #heading {
 	font-family: 'Black Ops One', cursive, sans-serif;
 	animation-duration: 3s;
-	animation-name: slidein;
+    animation-name: slidein;
 	font-size: 5em;
 	text-align: center;
-	/* left: 50%; */
+	align-items: center;
 }
 @keyframes slidein {
 	from {
@@ -162,6 +188,11 @@ li {
 
 	to {
 		margin-left: 0%;
-		width: 100%;
+		width:100%;
 	}
+}
+.b{
+	height: 100px;
+	width: 100px;
+	background-color: blanchedalmond;
 }
